--- a/LobView/Cargo.toml
+++ b/LobView/Cargo.toml
@@ -1,7 +1,19 @@
 [package]
 name = "LobView"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 yew = "^0.21"
+tokio = { version = "1", features = ["full"] }
+tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
+futures = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+url = "2.4"
+async-trait = "0.1"
+chrono = "0.4"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+reqwest = { version = "0.11", features = ["json"] }
